removed string array of players with player object